# resilient-write

./: .cursorrules  .gitignore  AGENT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  FIRST_INSTRUCTION.md  LICENSE  README.md  TODO-future-work.md  pyproject.toml
.agent/memory/: MEMORY.md  decisions.md  gotchas.md  next-steps.md  origin.md  user-profile.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  ERRORS.md  HANDOFF_SCHEMA.md  INSTALL.md  POLICY.md  SCENARIOS.md
paper/: Makefile  fig_architecture.tex  generate_figures.py  main.aux  main.bbl  main.blg  main.tex  references.bib
spec/: errors.schema.json
src/resilient_write/: __init__.py  analytics.py  checkpoint.py  chunks.py  errors.py  handoff.py  journal.py  paths.py  policy.py  risk_score.py  safe_write.py  scratchpad.py  server.py  validate.py
tests/: test_checkpoint.py  test_chunks.py  test_errors.py  test_handoff.py  test_journal.py  test_new_features.py  test_risk_score.py  test_safe_write.py  test_scaffold.py  test_scratchpad.py  test_server_dispatch.py  test_stdio_integration.py
